kubernetes/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: database
  name: postgres
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  selector:
    matchLabels:
      service: postgres
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13-alpine
          resources:
            limits:
              memory: 3Gi
              cpu: 1
            requests:
              memory: 1Gi
              cpu: 200m
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-volume-mount
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: postgres-volume-mount
          persistentVolumeClaim:
            claimName: postgres-pvc
