kubernetes/vue-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: vue
  name: vue
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  selector:
    matchLabels:
      app: vue
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: vue
    spec:
      containers:
        - image: mjhea0/vue-kubernetes:latest
          imagePullPolicy: Always
          name: vue
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          resources:
            limits:
              memory: 3Gi
              cpu: 1
            requests:
              memory: 1Gi
              cpu: 200m
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
