kubernetes/flask-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask
  labels:
    service: flask
spec:
  selector:
    app: flask
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  # - port: 5000
  #   targetPort: 5000
