kubernetes/minikube-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: test-ingress
spec:
  rules:
    - host: m3-test-port.nrp-nautilus.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vue
                port:
                  number: 8080
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: flask
                port:
                  number: 5000
  tls:
    - hosts:
        - m3-test-port.nrp-nautilus.io
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: database-ingress
#   annotations:
# spec:
#   rules:
#   - host: m3-learning-database.nrp-nautilus.io
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: vue
#             port:
#               number: 8080
#       - path: /books
#         pathType: Prefix
#         backend:
#           service:
#             name: flask
#             port:
#               number: 5000
